Post status can now be specified using the status: tag.
Post status setting was renamed to Default Post Status and moved to the Message tab.

= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.5.23 (future) =
* Remove PEAR/PEAR5 dependency which was causing errors on some systems

= 1.5.22 (2014.06.10) =
* Fix missing attachments for html messages

= 1.5.21 (2014.06.06) =
* Fixed spelling errors
* Added more debugging around image sizes
* Clarified some image options on settings page
* Removed call to wp_set_post_terms()

= 1.5.20 (2014.05.29) =
* Added logic to prevent appending images when preferred text type is HTML.
* Improved help text on several options and clarified options.
* Additional logging around attachment uploading

= 1.5.19 (2014.04.30) =
* Updated image preview to recognize all variables.
* Updated "wordpress_default" images template to match WP 3.8.
* Clarified logging messages for IMAP/IMAP-SSL/POP3-SSL
* Removed POSTTITLE from templates since we don't know the actual title at template time.
* Verified WordPress 3.9 compatibility

= 1.5.18 (2014.01.12) =
* Reverted text encoding change in 1.5.17.

= 1.5.17 (2013.12.19) =
* Fixed date calculation in test screen.
* Fixed text encoding issues for systems with PHP 5.4
* Updated CSS to better match WordPress 3.8 styles.
* Removed reference to pluggable.php to allow other plugins to plug these functions.
* Verified compatibility with WP 3.8

= 1.5.16 (2013.09.15) =
* Fixed date detection bug in forwarded messages.
* Possible fix for blank screen issue (flush buffers rather than check for sent headers).
* Fixed images showing up in excerpts when not specified.
* Fixed bug where time offset was applied twice.
* Fixed bug where excerpts where not getting the newline settings applied.
* Fixed bug where the attachment template was not getting set on new installs.