@@ -24,6 +24,7 @@ Attachments are now processed in the order they were attached.
 == CHANGELOG ==
 = 1.5.23 (future) =
 * Remove PEAR/PEAR5 dependency which was causing errors on some systems
+* Call wp_handle_upload_prefilter before adding images to WP
 
 = 1.5.22 (2014.06.10) =
 * Fix missing attachments for html messages
